--- a/SecondKadaiApp/Base.lproj/Main.storyboard
+++ b/SecondKadaiApp/Base.lproj/Main.storyboard
@@ -1,24 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nTX-2b-YSm">
+                                <rect key="frame" x="118.66666666666669" y="144" width="191" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="例）アイホン タロウ" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kWj-k4-nas">
+                                <rect key="frame" x="134" y="184" width="160.33333333333337" height="34"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i4e-DI-mxd">
+                                <rect key="frame" x="183" y="224" width="62" height="30"/>
+                                <state key="normal" title="決定する"/>
+                                <connections>
+                                    <segue destination="d7v-e1-kX3" kind="show" id="Zzq-w1-Pzf"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nTX-2b-YSm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1g6-ad-9gM"/>
+                            <constraint firstItem="i4e-DI-mxd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2MR-cF-b1Q"/>
+                            <constraint firstItem="kWj-k4-nas" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="140" id="VWC-cH-tdD"/>
+                            <constraint firstItem="nTX-2b-YSm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="huX-0b-GTn"/>
+                            <constraint firstItem="kWj-k4-nas" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iTj-X9-J6z"/>
+                            <constraint firstItem="i4e-DI-mxd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="180" id="q9z-3C-kwb"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="inputName" destination="kWj-k4-nas" id="3K9-Tf-jNW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="134.57943925233644" y="117.92656587473003"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="Ztk-uZ-d0Z">
+            <objects>
+                <viewController id="d7v-e1-kX3" customClass="ResultViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ENC-bV-otC">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VVd-b3-yZ0">
+                                <rect key="frame" x="198.66666666666666" y="180" width="31" height="30"/>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <segue destination="zYK-mh-BI3" kind="unwind" unwindAction="unwind:" id="057-zf-6oS"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="こんにちは、さん" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmy-hA-bSy">
+                                <rect key="frame" x="146" y="100" width="139" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nuA-l0-8PB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VVd-b3-yZ0" firstAttribute="centerX" secondItem="ENC-bV-otC" secondAttribute="centerX" id="cAN-pl-7Ry"/>
+                            <constraint firstItem="VVd-b3-yZ0" firstAttribute="top" secondItem="nuA-l0-8PB" secondAttribute="top" constant="180" id="o4w-sa-HYf"/>
+                            <constraint firstItem="dmy-hA-bSy" firstAttribute="top" secondItem="nuA-l0-8PB" secondAttribute="top" constant="100" id="wj7-uy-fxC"/>
+                            <constraint firstItem="dmy-hA-bSy" firstAttribute="centerX" secondItem="ENC-bV-otC" secondAttribute="centerX" id="z9B-sV-Mqf"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="jaA-Fv-D9e"/>
+                    <connections>
+                        <outlet property="label" destination="dmy-hA-bSy" id="Bpp-ff-s9k"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rBZ-Af-vlm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="zYK-mh-BI3" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="857" y="119"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
